[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "free-llm-api"
version = "0.2.0"
description = "FreeLLMAPI — Resilient router across free LLM API providers with failover, weighted scheduling, and hot-reloadable config."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Nabin Khadka", email = "nabinkhadka14@gmail.com" },
]
keywords = ["llm", "api", "router", "failover", "openrouter", "free", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/nabinkhadka/FreeLLMAPI"
Repository = "https://github.com/nabinkhadka/FreeLLMAPI.git"
"Bug Tracker" = "https://github.com/nabinkhadka/FreeLLMAPI/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
free_llm_api = ["config.yaml"]
